--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,15 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database
 spring.h2.console.enabled: true
 camunda.bpm:
-  admin-user:
-    id: demo
-    password: demo
+  #admin-user:
+    #id: demo
+    #password: demo
   filter.create: All Tasks
+custom:
+  users:
+    load-file-dir:
+#logging.level:
+  #org.camunda.bpm.engine.persistence: DEBUG
+  #org.camunda.bpm.engine.impl.persistence.entity: DEBUG
+  #org.camunda.bpm.engine.identity: DEBUG
+  #org.camunda.bpm.engine.security: DEBUG
