--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database
 spring.h2.console.enabled: true
 camunda.bpm:
-  #admin-user:
-    #id: demo
-    #password: demo
+  admin-user:
+    id: demo
+    password: demo
   filter.create: All Tasks
 custom:
   users:
